--- a/SuperSimplePlus/SuperSimplePlus.csproj
+++ b/SuperSimplePlus/SuperSimplePlus.csproj
@@ -3,7 +3,7 @@
         <TargetFramework>netstandard2.1</TargetFramework>
         <Version>1.0.0</Version>
         <Description>SuperSimplePlus</Description>
-        <Authors>satsumaimoamo</Authors>
+        <Authors>satsumaimoamo, Kurato_Tsukishiro</Authors>
         <AmongUsSSP Condition=" '$(AmongUsSSP)' == '' ">C:/Program Files/Epic Games/AmongUs_mymod</AmongUsSSP>
         <langVersion>preview</langVersion>
     </PropertyGroup>
