環境変数のミスを修正

--- a/SuperSimplePlus/SuperSimplePlus.csproj
+++ b/SuperSimplePlus/SuperSimplePlus.csproj
@@ -18,7 +18,7 @@
 
     <ItemGroup>
         <Reference Include="$(AmongUsSSP)/BepInEx/core/*.dll" />
-        <Reference Include="$(AmongUs)/BepInEx/unhollowed/*.dll" />
+        <Reference Include="$(AmongUsSSP)/BepInEx/unhollowed/*.dll" />
         <EmbeddedResource Include=".\Resources\**" />
     </ItemGroup>
 
