--- a/SuperSimplePlus/SuperSimplePlus.csproj
+++ b/SuperSimplePlus/SuperSimplePlus.csproj
@@ -32,6 +32,6 @@
 
     <Target Name="CopyCustomContent" AfterTargets="AfterBuild">
         <Message Text="Second occurrence" />
-        <Copy SourceFiles="$(ProjectDir)bin\$(Configuration)\netstandard2.1\SuperSimplePlus.dll" DestinationFolder="$(AmongUs)/BepInEx/plugins/" />
+        <Copy SourceFiles="$(ProjectDir)bin\$(Configuration)\netstandard2.1\SuperSimplePlus.dll" DestinationFolder="$(AmongUsSSP)/BepInEx/plugins/" />
     </Target>
 </Project>
